--- a/css/styles.css
+++ b/css/styles.css
@@ -323,3 +323,18 @@ footer {
 footer .space {
     padding-bottom: 25px;
 }
+
+/* Responsividade */
+
+/* Laptop 1100px */
+@media (max-width: 1100px) {
+
+    .pricing-container {
+        width: 95%;
+    }
+
+    .plans {
+        width: 95%;
+        margin: 0 10px;
+    }
+}
